# AnywhereChess

./: CMakeLists.txt
ChessCmd/: CMakeLists.txt
ChessCmd/executable/: main.cpp
ChessCmd/src/: ChessCmd.cpp  GameController.cpp  PieceToCharMapper.cpp
ChessCmd/src/include/: ChessCmd.h  CmdMove.h  CmdPieceType.h  GameController.h  PieceToCharMapper.h
ChessCmd/test/: CMakeLists.txt  ChessCmdTests.cpp  TestUtils.cpp  output_test.cpp
ChessCmd/test/include/: ChessCmd_AcceptanceTest.h  GameControllerTest.h  PieceToCharMapperTest.h  PondMoveTest.h  TestUtils.h
ChessCore/: CMakeLists.txt
ChessCore/include/: Board.h  BoardBuilder.h  ChessGame.h  ChessRuleService.h  CircularBoardRange.h  Column.h  Move.h  MoveResult.h  MoveValidator.h  Optional.h  Piece.h  PieceColor.h  PieceHandle.h  PieceOptional.h  PieceType.h  Position.h  PromotionResult .h  RectangleBoardRange.h  Row.h  Square.h  Types.h  utils.h
ChessCore/src/: Board.cpp  BoardBuilder.cpp  ChessGame.cpp  ChessRuleService.cpp  CircularBoardRange.cpp  Move.cpp  MoveResult.cpp  MoveValidator.cpp  Piece.cpp  PieceHandle.cpp  PieceOptional.cpp  Position.cpp  RectangleBoardRange.cpp  Square.cpp  utils.cpp
ChessCore/test/: ChessCoreTests.cpp  TestUtils.cpp  test1.txt
ChessCore/test/include/: BoardTest.h  ChessGameTest.h  ChessRuleServiceTest.h  CircularBoardRangeTest.h  ColumnTest.h  MemoryManagmentUtils.h  PieceHandleTest.h  PieceOptionalTest.h  PondMoveTest.h  RectangleBoardRangeTest.h  RowTest.h  TestUtils.h  UtilsTest.h
ChessCoreIO/: CMakeLists.txt
ChessCoreIO/include/: ChessCoreIO.h  PieceToCharMapper.h
ChessCoreIO/src/: ChessCoreIO.cpp  PieceToCharMapper.cpp
ChessCoreIO/test/: ChessCoreIOTests.cpp
ChessCoreIO/test/include/: PieceToCharMapperTest.h
